--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "https://github.com/vaiil",
   "license": "ISC",
   "dependencies": {
-    "@up-line/stylelint-bem-ruleset": "^1.0.4",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-rational-order-fix": "^0.1.9",
-    "stylelint-config-recommended-scss": "^5.0.2",
-    "stylelint-config-standard": "^25.0.0",
-    "stylelint-scss": "^4.1.0"
+    "@sazuru/stylelint-config-rational-order": "^0.1.4",
+    "@up-line/stylelint-bem-ruleset": "^2.0.1",
+    "stylelint-config-recommended-scss": "^14.1.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-scss": "^6.4.1"
   },
   "peerDependencies": {
-    "stylelint": ">=13.0.0"
+    "stylelint": ">=16.0.0"
   }
 }
